[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
server = { path = "../server" }
